[BUGFIX]
Backend module markup generates a table that is too large

Fixes: #59718

--- a/Resources/Private/Sass/Backend.scss
+++ b/Resources/Private/Sass/Backend.scss
@@ -20,10 +20,15 @@
 .clear {
 	clear: both;
 }
-.powermail-backend * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+.powermail-backend {
+	* {
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+	}
+	table.typo3-dblist tr td.col-title {
+		width: auto;
+	}
 }
 .powermail-backend-select {
 	padding-left: 0;
